Ajustes breakpoint mobile

--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -45,6 +45,10 @@
             position: relative;
         }
 
+        .holy-souce-hero-title-mobile {
+            display: none;
+        }
+
         .holy-souce-hero-title {
             width: 60%;
             position: absolute;
