--- a/css/style.css
+++ b/css/style.css
@@ -1285,7 +1285,7 @@ footer .terminos-y-condiciones .modal-body {
 .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-image img {
   width: 25em;
 }
-.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item {
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1293,32 +1293,32 @@ footer .terminos-y-condiciones .modal-body {
   border-bottom: 1px solid var(--color-grey);
   padding-bottom: 10px;
 }
-.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item #descriptionItem01, .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item #descriptionItem02, .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item #descriptionItem03, .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item #descriptionItem04 {
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item #descriptionItem01, .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item #descriptionItem02, .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item #descriptionItem03, .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item #descriptionItem04 {
   display: none;
 }
-.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .holy-souce-section-process-item-title {
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title {
   display: flex;
   justify-content: space-between;
   padding-top: 30px;
   padding-bottom: 10px;
   align-items: center;
 }
-.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .holy-souce-section-process-item-title .item-title-number-text {
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text {
   display: flex;
   align-items: center;
 }
-.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .holy-souce-section-process-item-title .item-title-number-text .item-title-number p {
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text .item-title-number p {
   font-family: var(--font-satoshi-medium);
   color: var(--color-grey);
   font-size: 23px;
   margin-right: 30px;
 }
-.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .holy-souce-section-process-item-title .item-title-number-text .item-title-text p {
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text .item-title-text p {
   font-family: var(--font-satoshi-medium);
   color: var(--color-black);
   font-size: 25px;
 }
-.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .holy-souce-section-process-item-title .item-title-icon i {
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-icon i {
   color: var(--color-red);
 }
 .holy-souce .holy-souce-section .holy-souce-section-heading-title-video h2 {
@@ -1488,6 +1488,9 @@ footer .terminos-y-condiciones .modal-body {
 */
 /* Mobile Styles */
 @media only screen and (max-width: 576px) {
+  .holy-souce {
+    /* Footer */
+  }
   .holy-souce .holy-souce-hero {
     display: flex;
     flex-direction: column;
@@ -1513,6 +1516,9 @@ footer .terminos-y-condiciones .modal-body {
   }
   .holy-souce .holy-souce-section {
     margin: 60px auto;
+    /* Section From seeds to bottles - Process */
+    /* Section Watch our Authentic Process */
+    /* Section simple & Tasty recipes */
   }
   .holy-souce .holy-souce-section .holy-souce-section-product {
     width: 100%;
@@ -1550,6 +1556,12 @@ footer .terminos-y-condiciones .modal-body {
   .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-image img {
     width: 20em;
   }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text .item-title-number p {
+    margin-right: 15px;
+  }
+  .holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .process-item .process-item-title .item-title-number-text .item-title-text p {
+    font-size: 18px;
+  }
   .holy-souce .holy-souce-section .holy-souce-section-video .holy-souce-section-product-video video {
     width: 100%;
   }
@@ -1572,6 +1584,14 @@ footer .terminos-y-condiciones .modal-body {
   }
   .holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipe-description .recipes-title p {
     font-size: 18px;
+  }
+  .holy-souce .footer-holy-souce {
+    padding: 10px 0px;
+  }
+  .holy-souce .footer-holy-souce .legal-liks {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
 /* Tablet Styles */
