--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -274,49 +274,52 @@
             }
 
             .holy-souce-section-process-item {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                margin: auto;
-                border-bottom: 1px solid var(--color-grey);
-                padding-bottom: 10px;
 
-                #descriptionItem01, #descriptionItem02, #descriptionItem03, #descriptionItem04 {
-                    display: none;
-                }
-
-                .holy-souce-section-process-item-title {
+                .process-item {
                     display: flex;
-                    justify-content: space-between;
-                    padding-top: 30px;
+                    flex-direction: column;
+                    justify-content: center;
+                    margin: auto;
+                    border-bottom: 1px solid var(--color-grey);
                     padding-bottom: 10px;
-                    align-items: center;
 
-                    .item-title-number-text {
-                        display: flex;
-                        align-items: center;
-
-                            .item-title-number {
-                                p {
-                                    font-family: var(--font-satoshi-medium);
-                                    color: var(--color-grey);
-                                    font-size: 23px;
-                                    margin-right: 30px;
-                                }
-                            }
-
-                            .item-title-text {
-                                p {
-                                    font-family: var(--font-satoshi-medium);
-                                    color: var(--color-black);
-                                    font-size: 25px;
-                                }
-                            }
+                    #descriptionItem01, #descriptionItem02, #descriptionItem03, #descriptionItem04 {
+                        display: none;
                     }
 
-                    .item-title-icon {
-                        i {
-                            color: var(--color-red);
+                    .process-item-title {
+                        display: flex;
+                        justify-content: space-between;
+                        padding-top: 30px;
+                        padding-bottom: 10px;
+                        align-items: center;
+
+                        .item-title-number-text {
+                            display: flex;
+                            align-items: center;
+
+                                .item-title-number {
+                                    p {
+                                        font-family: var(--font-satoshi-medium);
+                                        color: var(--color-grey);
+                                        font-size: 23px;
+                                        margin-right: 30px;
+                                    }
+                                }
+
+                                .item-title-text {
+                                    p {
+                                        font-family: var(--font-satoshi-medium);
+                                        color: var(--color-black);
+                                        font-size: 25px;
+                                    }
+                                }
+                        }
+
+                        .item-title-icon {
+                            i {
+                                color: var(--color-red);
+                            }
                         }
                     }
                 }
