--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -14,7 +14,7 @@
         background-color:var(--color-black-85);
    }
 
-   nav.navbar.navbar-expand-lg.navbar-light {
+   nav.navbar.navbar-expand-lg.navbar-dark {
         padding-top: 20px;
         padding-bottom: 20px;
 
